<?xml version="1.0"?>
<package>
  <name>manipulator_h_kinematics_dynamics</name>
  <version>0.2.0</version>
  <description>
    The manipulator_h_kinematics_dynamics package
    This packages provides library of kinematics and dynamics information for ROBOTIS MANIPULATOR-H.
    Additionally, there are some function to calculate kinematics and dynamics.
  </description>
  <license>BSD</license>
  <author email="sch@robotis.com">sch</author>
  <maintainer email="pyo@robotis.com">pyo</maintainer>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-MANIPULATOR-H/issues</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-MANIPULATOR-H</url>
  <url type="website">http://wiki.ros.org/ROBOTIS-MANIPULATOR-H</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>robotis_math</build_depend>
  <build_depend>cmake_modules</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>cmake_modules</run_depend>
  <export></export>
</package>
