<?xml version="1.0"?>
<package>
  <name>manipulator_h_manager</name>
  <version>0.0.0</version>
  <description>The manipulator_h_manager package</description>

  <maintainer email="sch@robotis.com">sch</maintainer>
  <license>BSD</license>
  <author email="sch@robotis.com">sch</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>dynamixel_sdk</build_depend>
  <build_depend>robotis_framework_common</build_depend>
  <build_depend>robotis_device</build_depend>
  <build_depend>robotis_controller</build_depend>
  <build_depend>robotis_controller_msgs</build_depend>
  
  <build_depend>cmake_modules</build_depend>
  <build_depend>manipulator_h_base_module</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>robotis_controller</run_depend>
</package>
