<?xml version="1.0"?>
<package>
  <name>manipulator_h_sdk</name>
  <version>0.0.0</version>
  <description>The manipulator_h_sdk package</description>
  <license>BSD</license>
  <author email="sch@robotis.com">SCH</author>
  <maintainer email="sch@robotis.com">SCH</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>dynamixel_sdk</build_depend>
  <build_depend>robotis_framework_common</build_depend>
  <build_depend>robotis_device</build_depend>
  <build_depend>robotis_controller</build_depend>
  <build_depend>robotis_controller_msgs</build_depend>
  <build_depend>robotis_math</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>robotis_controller</run_depend>
  <run_depend>robotis_framework_common</run_depend>
  <run_depend>robotis_math</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
