<?xml version="1.0"?>
<package>
  <name>manipulator_kinematics_dynamics</name>
  <version>0.0.0</version>
  <description>The manipulator_kinematics_dynamics package</description>

  <maintainer email="sch@robotis.com">sch</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>robotis_math</build_depend>
  <build_depend>cmake_modules</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>robotis_math</run_depend>
  <run_depend>cmake_modules</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
