<?xml version="1.0"?>
<package>
  <name>robotis_manipulator_gui</name>
  <version>0.1.0</version>
  <description>

     robotis_manipulator_gui

  </description>
  <maintainer email="sch@robotis.com">sch</maintainer>
  <author>sch</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>

  <build_depend>robotis_controller_msgs</build_depend>
  <build_depend>manipulator_demo_module_msgs</build_depend>

  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>eigen_conversions</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>eigen_conversions</run_depend>
 
</package>
